# se-pkg

./: Cargo.toml  README.md  build.rs
man/: se.1
scripts/: se-pkg-paru-helper
src/: main.rs
